--- a/reakbackend/.env
+++ b/reakbackend/.env
@@ -1,2 +1,3 @@
-#These are comments
-DBURI=mongodb+srv://saisrihitha:Honey777@cluster0.rgtg7za.mongodb.net/DuneUniversity?retryWrites=true&w=majority&appName=Cluster0
+# #These are comments
+# DBURI=mongodb+srv://saisrihitha:Honey777@cluster0.rgtg7za.mongodb.net/DuneUniversity?retryWrites=true&w=majority&appName=Cluster0
+DBURI=mongodb+srv://saishankargade:e0emW4rfQMaGGEwd@cluster0.1cagrk3.mongodb.net/
