--- a/reakbackend/package.json
+++ b/reakbackend/package.json
@@ -8,6 +8,7 @@
     "accepts": "^1.3.8",
     "anymatch": "^3.1.3",
     "array-flatten": "^1.1.1",
+    "axios": "^1.7.2",
     "balanced-match": "^1.0.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -37,8 +38,10 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
     "function-bind": "^1.1.2",
@@ -85,6 +88,7 @@
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.7",
+    "pdf-parse": "^1.1.1",
     "picomatch": "^2.3.1",
     "proxy-addr": "^2.0.7",
     "pstree.remy": "^1.1.8",
