--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-# #These are comments
+#These are comments
 # DBURI=mongodb+srv://saisrihitha:Honey777@cluster0.rgtg7za.mongodb.net/DuneUniversity?retryWrites=true&w=majority&appName=Cluster0
+READ_ME="Rename this file to .env and fill in the values below"
 DBURI=mongodb+srv://saishankargade:e0emW4rfQMaGGEwd@cluster0.1cagrk3.mongodb.net/
